@@ -19,6 +19,7 @@ package com.android.internal.protolog;
 import static android.tools.traces.Utils.busyWaitForDataSourceRegistration;
 import static android.tools.traces.Utils.busyWaitTracingSessionDoesntExist;
 import static android.tools.traces.Utils.busyWaitTracingSessionExists;
+import static android.tracing.perfetto.TestUtils.createTempWriter;
 
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertThrows;
@@ -32,8 +33,6 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import static perfetto.protos.TracePacketOuterClass.TracePacket.SequenceFlags.SEQ_NEEDS_INCREMENTAL_STATE;
-
-import static java.io.File.createTempFile;
 
 import android.os.SystemClock;
 import android.platform.test.annotations.Presubmit;
@@ -92,12 +91,6 @@ public class ProcessedPerfettoProtoLogImplTest {
     private static final String MOCK_VIEWER_CONFIG_FILE = "my/mock/viewer/config/file.pb";
     private final File mTracingDirectory = InstrumentationRegistry.getInstrumentation()
             .getTargetContext().getFilesDir();
-
-    private final ResultWriter mWriter = new ResultWriter()
-            .forScenario(new ScenarioBuilder()
-                    .forClass(createTempFile("temp", "").getName()).build())
-            .withOutputDir(mTracingDirectory)
-            .setRunComplete();
 
     private final TraceConfigs mTraceConfig = new TraceConfigs(
             new TraceConfig(false, true, false),
@@ -232,7 +225,7 @@ public class ProcessedPerfettoProtoLogImplTest {
             traceMonitor.start();
             assertTrue(sProtoLog.isProtoEnabled());
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(createTempWriter(mTracingDirectory));
         }
     }
 
@@ -245,7 +238,7 @@ public class ProcessedPerfettoProtoLogImplTest {
             traceMonitor.start();
             assertTrue(sProtoLog.isProtoEnabled());
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(createTempWriter(mTracingDirectory));
         }
 
         assertFalse(sProtoLog.isProtoEnabled());
@@ -256,6 +249,8 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(false, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             // Shouldn't be logging anything except WTF unless explicitly requested in the group
@@ -271,10 +266,10 @@ public class ProcessedPerfettoProtoLogImplTest {
             sProtoLog.log(LogLevel.WTF, TestProtoLogGroup.TEST_GROUP, 5,
                     LogDataType.BOOLEAN, new Object[]{true});
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write(), mTraceConfig);
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(1);
@@ -290,6 +285,8 @@ public class ProcessedPerfettoProtoLogImplTest {
                                 TestProtoLogGroup.TEST_GROUP.toString(), LogLevel.DEBUG, true)),
                         TEST_PROTOLOG_DATASOURCE_NAME
                 ).build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP, 1,
@@ -303,10 +300,10 @@ public class ProcessedPerfettoProtoLogImplTest {
             sProtoLog.log(LogLevel.WTF, TestProtoLogGroup.TEST_GROUP, 5,
                     LogDataType.BOOLEAN, new Object[]{true});
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write(), mTraceConfig);
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(4);
@@ -325,6 +322,8 @@ public class ProcessedPerfettoProtoLogImplTest {
                                 TestProtoLogGroup.TEST_GROUP.toString(), LogLevel.WARN, false)),
                         TEST_PROTOLOG_DATASOURCE_NAME
                     ).build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP, 1,
@@ -338,10 +337,10 @@ public class ProcessedPerfettoProtoLogImplTest {
             sProtoLog.log(LogLevel.WTF, TestProtoLogGroup.TEST_GROUP, 5,
                     LogDataType.BOOLEAN, new Object[]{true});
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write(), mTraceConfig);
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(3);
@@ -355,6 +354,8 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(true, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP, 1,
@@ -368,10 +369,10 @@ public class ProcessedPerfettoProtoLogImplTest {
             sProtoLog.log(LogLevel.WTF, TestProtoLogGroup.TEST_GROUP, 5,
                     LogDataType.BOOLEAN, new Object[]{true});
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write(), mTraceConfig);
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(5);
@@ -454,6 +455,8 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         long before;
         long after;
         try {
@@ -468,10 +471,10 @@ public class ProcessedPerfettoProtoLogImplTest {
                     new Object[]{"test", 1, 2, 3, 0.4, 0.5, 0.6, true});
             after = SystemClock.elapsedRealtimeNanos();
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write(), mTraceConfig);
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(1);
@@ -489,6 +492,8 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         long before;
         long after;
         try {
@@ -502,10 +507,10 @@ public class ProcessedPerfettoProtoLogImplTest {
                     "test", 1, 3, 0.4, true);
             after = SystemClock.elapsedRealtimeNanos();
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write(), mTraceConfig);
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(1);
@@ -522,15 +527,17 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(true, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP, 1,
                     LogDataType.BOOLEAN, new Object[]{true});
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write(), mTraceConfig);
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(1);
@@ -558,6 +565,8 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             sProtoLog.log(
@@ -565,10 +574,10 @@ public class ProcessedPerfettoProtoLogImplTest {
                     0b01100100,
                     new Object[]{"test", 1, 0.1, true});
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write(), mTraceConfig);
         assertThrows(java.net.SocketException.class, reader::readProtoLogTrace);
     }
 
@@ -577,15 +586,17 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(false, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP, 1,
                     0b11, new Object[]{true});
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write(), mTraceConfig);
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).isEmpty();
@@ -601,6 +612,8 @@ public class ProcessedPerfettoProtoLogImplTest {
                                 true)),
                         TEST_PROTOLOG_DATASOURCE_NAME
                 ).build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
 
@@ -608,10 +621,10 @@ public class ProcessedPerfettoProtoLogImplTest {
             ProtoLogImpl.d(TestProtoLogGroup.TEST_GROUP, 1,
                     0b11, true);
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write(), mTraceConfig);
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(1);
@@ -657,13 +670,13 @@ public class ProcessedPerfettoProtoLogImplTest {
 
                 Truth.assertThat(cacheUpdateCallCount.get()).isEqualTo(2);
             } finally {
-                traceMonitor2.stop(mWriter);
+                traceMonitor2.stop(createTempWriter(mTracingDirectory));
             }
 
             Truth.assertThat(cacheUpdateCallCount.get()).isEqualTo(3);
 
         } finally {
-            traceMonitor1.stop(mWriter);
+            traceMonitor1.stop(createTempWriter(mTracingDirectory));
         }
 
         Truth.assertThat(cacheUpdateCallCount.get()).isEqualTo(4);
@@ -729,7 +742,7 @@ public class ProcessedPerfettoProtoLogImplTest {
                 Truth.assertThat(sProtoLog.isEnabled(TestProtoLogGroup.TEST_GROUP, LogLevel.WTF))
                         .isTrue();
             } finally {
-                traceMonitor2.stop(mWriter);
+                traceMonitor2.stop(createTempWriter(mTracingDirectory));
             }
 
             Truth.assertThat(sProtoLog.isEnabled(TestProtoLogGroup.TEST_GROUP, LogLevel.DEBUG))
@@ -745,7 +758,7 @@ public class ProcessedPerfettoProtoLogImplTest {
             Truth.assertThat(sProtoLog.isEnabled(TestProtoLogGroup.TEST_GROUP, LogLevel.WTF))
                     .isTrue();
         } finally {
-            traceMonitor1.stop(mWriter);
+            traceMonitor1.stop(createTempWriter(mTracingDirectory));
         }
 
         Truth.assertThat(sProtoLog.isEnabled(TestProtoLogGroup.TEST_GROUP, LogLevel.DEBUG))
@@ -768,20 +781,21 @@ public class ProcessedPerfettoProtoLogImplTest {
                 .enableProtoLog(true, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
 
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
 
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP,
                     "My test null string: %s", (Object) null);
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write(), mTraceConfig);
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(1);
-        Truth.assertThat(protolog.messages.get(0).getMessage())
+        Truth.assertThat(protolog.messages.getFirst().getMessage())
                 .isEqualTo("My test null string: null");
     }
 
@@ -791,20 +805,21 @@ public class ProcessedPerfettoProtoLogImplTest {
                 .enableProtoLog(true, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
 
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
 
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP,
                     "My null args: %d, %f, %b", null, null, null);
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write(), mTraceConfig);
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(1);
-        Truth.assertThat(protolog.messages.get(0).getMessage())
+        Truth.assertThat(protolog.messages.getFirst().getMessage())
                 .isEqualTo("My null args: 0, 0.000000, false");
     }
 
@@ -818,12 +833,8 @@ public class ProcessedPerfettoProtoLogImplTest {
                 .enableProtoLog(true, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
 
-        final ResultWriter writer2 = new ResultWriter()
-                .forScenario(new ScenarioBuilder()
-                        .forClass(createTempFile("temp", "").getName()).build())
-                .withOutputDir(mTracingDirectory)
-                .setRunComplete();
-
+        final var writer = createTempWriter(mTracingDirectory);
+        final var writer2 = createTempWriter(mTracingDirectory);
         try {
             traceMonitor1.start();
             traceMonitor2.start();
@@ -831,22 +842,22 @@ public class ProcessedPerfettoProtoLogImplTest {
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP, 1,
                     LogDataType.BOOLEAN, new Object[]{true});
         } finally {
-            traceMonitor1.stop(mWriter);
+            traceMonitor1.stop(writer);
             traceMonitor2.stop(writer2);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write(), mTraceConfig);
         final ProtoLogTrace protologFromMonitor1 = reader.readProtoLogTrace();
 
         final ResultReader reader2 = new ResultReader(writer2.write(), mTraceConfig);
         final ProtoLogTrace protologFromMonitor2 = reader2.readProtoLogTrace();
 
         Truth.assertThat(protologFromMonitor1.messages).hasSize(1);
-        Truth.assertThat(protologFromMonitor1.messages.get(0).getMessage())
+        Truth.assertThat(protologFromMonitor1.messages.getFirst().getMessage())
                 .isEqualTo("My Test Debug Log Message true");
 
         Truth.assertThat(protologFromMonitor2.messages).hasSize(1);
-        Truth.assertThat(protologFromMonitor2.messages.get(0).getMessage())
+        Truth.assertThat(protologFromMonitor2.messages.getFirst().getMessage())
                 .isEqualTo("My Test Debug Log Message true");
     }
 
@@ -855,6 +866,8 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(LogLevel.WARN, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP,
@@ -864,10 +877,10 @@ public class ProcessedPerfettoProtoLogImplTest {
             sProtoLog.log(LogLevel.ERROR, TestProtoLogGroup.TEST_GROUP,
                     "This message should also be logged %d", 567);
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write(), mTraceConfig);
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(2);
@@ -888,6 +901,8 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(LogLevel.DEBUG, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             sProtoLog.log(LogLevel.VERBOSE, TestProtoLogGroup.TEST_GROUP,
@@ -895,17 +910,17 @@ public class ProcessedPerfettoProtoLogImplTest {
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP,
                     "This message should be logged %d", 123);
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write(), mTraceConfig);
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(1);
 
-        Truth.assertThat(protolog.messages.get(0).getLevel())
+        Truth.assertThat(protolog.messages.getFirst().getLevel())
                 .isEqualTo(LogLevel.DEBUG);
-        Truth.assertThat(protolog.messages.get(0).getMessage())
+        Truth.assertThat(protolog.messages.getFirst().getMessage())
                 .isEqualTo("This message should be logged 123");
     }
 
@@ -917,6 +932,8 @@ public class ProcessedPerfettoProtoLogImplTest {
                                 TestProtoLogGroup.TEST_GROUP.name(), LogLevel.DEBUG, false)
                 ), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             sProtoLog.log(LogLevel.VERBOSE, TestProtoLogGroup.TEST_GROUP,
@@ -924,17 +941,17 @@ public class ProcessedPerfettoProtoLogImplTest {
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP,
                     "This message should be logged %d", 123);
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write(), mTraceConfig);
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(1);
 
-        Truth.assertThat(protolog.messages.get(0).getLevel())
+        Truth.assertThat(protolog.messages.getFirst().getLevel())
                 .isEqualTo(LogLevel.DEBUG);
-        Truth.assertThat(protolog.messages.get(0).getMessage())
+        Truth.assertThat(protolog.messages.getFirst().getMessage())
                 .isEqualTo("This message should be logged 123");
     }
 
@@ -983,6 +1000,8 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(true, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             assertTrue("ProtoLog should be enabled after starting the trace.",
@@ -992,10 +1011,10 @@ public class ProcessedPerfettoProtoLogImplTest {
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP, 1,
                     LogDataType.BOOLEAN, new Object[]{true}); // "true" to distinguish
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write(), mTraceConfig);
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(1);
@@ -1105,6 +1124,8 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(true, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             assertTrue("ProtoLog should be enabled after starting the trace.",
@@ -1161,11 +1182,11 @@ public class ProcessedPerfettoProtoLogImplTest {
             if (allowProcessingToContinueLatch.getCount() > 0) {
                 allowProcessingToContinueLatch.countDown();
             }
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
         // Verify that all messages were written to the trace.
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write(), mTraceConfig);
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(numMessages);
@@ -1206,6 +1227,7 @@ public class ProcessedPerfettoProtoLogImplTest {
             }
         });
 
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             assertTrue("ProtoLog tracing should be enabled", sProtoLog.isProtoEnabled());
@@ -1218,10 +1240,10 @@ public class ProcessedPerfettoProtoLogImplTest {
             // Unpause the background thread.
             backgroundThreadPausedLatch.countDown();
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader resultReader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader resultReader = new ResultReader(writer.write(), mTraceConfig);
         final ProtoLogTrace protologTrace = resultReader.readProtoLogTrace();
 
         Truth.assertThat(protologTrace.messages).hasSize(1);
@@ -1240,6 +1262,8 @@ public class ProcessedPerfettoProtoLogImplTest {
                                 true)), // enable stacktrace
                         TEST_PROTOLOG_DATASOURCE_NAME
                 ).build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
 
@@ -1248,10 +1272,10 @@ public class ProcessedPerfettoProtoLogImplTest {
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP, 1,
                     LogDataType.BOOLEAN, new Object[]{true});
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write(), mTraceConfig);
         final var traceBytes = reader.readBytes(TraceType.PERFETTO, Tag.ALL);
         final var trace = Trace.parseFrom(traceBytes);
         final var protoLogMessagePackets = trace.getPacketList().stream()
@@ -1271,6 +1295,8 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(true, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
 
@@ -1279,10 +1305,10 @@ public class ProcessedPerfettoProtoLogImplTest {
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP, 6,
                     LogDataType.STRING, new Object[]{"test_string"});
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write(), mTraceConfig);
         final var traceBytes = reader.readBytes(TraceType.PERFETTO, Tag.ALL);
         final var trace = Trace.parseFrom(traceBytes);
         final var protoLogMessagePackets = trace.getPacketList().stream()
